<resources>
    <string name="app_name">EpochConverter</string>
    <string name="hint_enter_timestamp">Enter timestamp</string>
    <string name="button_convert">Convert</string>
    <string name="result_default">Result</string>
    <string name="error_invalid_timestamp">Invalid Timestamp</string>

    <string name="hint_enter_day">Day</string>
    <string name="hint_enter_month">Month</string>
    <string name="hint_enter_year">Year</string>
    <string name="hint_enter_hour">Hour</string>
    <string name="hint_enter_minute">Minute</string>
    <string name="hint_enter_seconds">Seconds</string>
    <string name="button_human_date">Convert</string>
    <string name="error_invalid_date">Invalid Date</string>

    <string name="unix_timestamp_result">Unix Timestamp Result</string>
    <string name="human_date_result">Human Date Result</string>
</resources>